<resources>
    <string name="app_name">Buddy</string>
    <string name="home_title">Inicio</string>
    <string name="home_Recetas">Recetas\n</string>
    <string name="home_profile">Perfil</string>
    <string name="home_Ejercicios">Ejercicios</string>
    <string name="home_Enfermedades">Enfermedades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_auth_welcome">Bienvenido\n</string>
    <string name="dialog_delete_title">¿Eliminar la publicacion?</string>
    <string name="dialog_delete_confirm">¿Eliminar? \n</string>
    <string name="home_delte_photo_error">Error al eliminar la publicacion</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="post_message_title">Seleccione una imagen</string>
    <string name="dialog_logout_title">¿Desea cerrar sesion?</string>
    <string name="dialog_logout_confirm">¿Cerrar?</string>
    <string name="dialog_logout_cancel">¿Cancelar?</string>
    <string name="post_message_valid_title">Por favor, añada un titulo</string>
    <string name="helper_requiered">Este campo es requerido\n</string>
    <string name="post_message_post_fail">No se logro subir la foto\n</string>
    <string name="post_succes">Foto publicada\n</string>

    <string name="Comenta">Comentar\n</string>


    <string name="Ingrese_foto">presione sobre el icono para subir una foto</string>
    <string name="cambiar_contraseña">cambiar contraseña</string>
    <string name="indicaciones">por razones de seguridad, debes ingresar tu antigua contraseña para que el proceso sea valido</string>

</resources>